# lmprep

./: .gitignore  Cargo.toml  MANIFEST.in  PYPI_README.md  README.md  dev_build.sh  pyproject.toml  setup.py  test_build.py
.github/workflows/: release.yml  test-release.yml
binaries/darwin_arm64/: lm
binaries/darwin_universal2/: lm
install/: BUILD.md  dev-setup.sh  install_macos.sh  install_ubuntu.sh  install_windows.ps1  uninstall.sh
lmprep/: __init__.py  cli.py
lmprep/binaries/darwin_arm64/: lm
src/: config-example.yml  file_filter.rs  main.rs
tests/: conftest.py  test_deployment.py
