[build-system]
requires = ["setuptools>=75.6.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "lmprep"
version = "0.4.0"
description = "A tool for preparing your codebase for use with LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["llm", "code", "preparation"]
authors = [
    { name = "bcherb2" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools]
packages = ["lmprep"]
include-package-data = true

[tool.setuptools.package-data]
"lmprep" = ["default_config.yml", "binaries/**/*"]

[project.scripts]
lm = "lmprep.cli:main"

[project.urls]
Homepage = "https://github.com/bcherb2/lmprep"
Repository = "https://github.com/bcherb2/lmprep.git"